--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -70,6 +70,9 @@
 % List of Figures, Tables
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \listoffigures\addcontentsline{toc}{chapter}{\listfigurename}
+\listoftodos 
+
+nyugi, ez a rész nem lesz benne a véglegesben 
 %\listoftables\addcontentsline{toc}{chapter}{\listtablename}
 
 
