--- a/src/bib/mybib.bib
+++ b/src/bib/mybib.bib
@@ -173,6 +173,19 @@ year = {2002},
 journal = {The Addison-Wesley Object TechnologySeries: Addison-Wesley Professional}
 )
 
+@article(pssm-testing,
+author = {Márton Elekes, Zoltán Micskei},
+title = {Towards Testing the UML PSSM Test Suite.},
+year = {2021}
+)
+
+@article(pssm,
+author = {OMG},
+title = {Precise Semantics of UML State Machines (PSSM)},
+year = {2019},
+journal = {formal/19-05-01.}
+)
+
 ﻿@Article{mixed_statecharts_2020,
 author={Graics, Bence
 and Moln{\'a}r, Vince
