--- a/src/content/activity-language/formal-definition.tex
+++ b/src/content/activity-language/formal-definition.tex
@@ -2,6 +2,8 @@
 \clearpage\section{Formal Definition}
 %----------------------------------------------------------------------------
 
+\todo{Finalise formalism}
+
 In order to offer mathematical precision, formal verification methods require formally defined models with clear semantics. In this section I present the formal definition of the novel GAL formalism.
 
 \begin{definition}[Gamma Activity Language]
