--- a/src/content/activity-model-verification.tex
+++ b/src/content/activity-model-verification.tex
@@ -1,16 +1,16 @@
 %----------------------------------------------------------------------------
-\chapter{Activity Model Verification}\label{ch:activiy_verification}
+\chapter{Integrating Activity Language Into Gamma}\label{ch:activiy_verification}
 %----------------------------------------------------------------------------
 
-ide fog kerülni végül az implementation, hogyan kell trafózni a modelt, és hogyan kell ezt az egészet integrálni a gamma statechart trafóval (hogy verifikálható legyen)
+We defined the language, however many unanswared questions
+how to transform side by side
+to to verify
+what semantics
+etc
 
-\begin{figure}[!ht]
-	\centering
-	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{gamma-functionality-activity-overview}
-	\caption{Overview of my modification to the Gamma framework. Added parts are outlined with green, while edited parts are outlined with orange.}
-	\label{fig:gamma-activity-overview}
-\end{figure}
+how to integrate into gamma, action, do action, etc, transition
+gamma használja az xsts-t -> xsts-re kell trafózni
 
-
-\input{content/activity-model-verification/state-model}
 \input{content/activity-model-verification/activities-alongside-statecharts}
+\input{content/activity-model-verification/state-model}
+\input{content/activity-model-verification/implementation-regards}
