--- a/src/content/activity-model-verification/state-model.tex
+++ b/src/content/activity-model-verification/state-model.tex
@@ -2,16 +2,11 @@
 \section{Activities as State-based Models}
 %----------------------------------------------------------------------------
 
-activity vagy proces-model?
+\begin{figure}[!ht]
+	\centering
+	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{gamma-functionality-activity-overview}
+	\caption{Overview of my modification to the Gamma framework. Added parts are outlined with green, while edited parts are outlined with orange.}
+	\label{fig:gamma-activity-overview}
+\end{figure}
 
-ahogy fentebb írtam, tokenek haladnak, és tranzíciók vannak.
-
-A process-orionted model előnye itt a hátrányunk; mivel sok process mehet teljesen függetlenül egymástól, ezért nagyon nehéz szépen leírni őket
-
-tegyük fel, hogy a node-ok és csatlakozók token-tartalma egy állapot; vagy van benne, vagy nincs. ehhez még hozzátesszük azt, hogy a node éppen fut, kész, vagy nem csinál semmit.
-
-ezek alapján le tudunk írni bármilyen process-oriontált modelt állapot alapú modellben, feltételezve, hogy bármikor bármelyik tranzíció tüzelhet.
-
-itt leírom az activity különböző node-jait, és azoknak a különböző szabályait (merge, choice, stb)
-
-majd leírom a különböző csatlakozók segítségével is
+formalizmus trafózása statechart mellett xsts-re. a végeredmény miért ekvivalens
