--- a/src/content/appendices.tex
+++ b/src/content/appendices.tex
@@ -12,3 +12,4 @@
 \input{content/appendices/gamma_language}
 \input{content/appendices/xsts_language}
 \input{content/appendices/activity_language}
+\input{content/appendices/spacecraft-model}
