--- a/src/content/conclusion.tex
+++ b/src/content/conclusion.tex
@@ -2,4 +2,13 @@
 \chapter{Conclusion}\label{ch:conclusion}
 %----------------------------------------------------------------------------
 
-% TODO
+ami nem ment evaluationbe
+ - lassú
+ - nem skálázódik
+ - de egy első lépés, hogy unified verifikációt lehessen csinálni komplikált rendszereken
+
+\paragraph{Future Work}
+ - sysml activity nagyobb mappelése
+ - signalok bevezetése
+ - activity külön komponensként
+ - activity inline-olása transition action-re
