--- a/src/content/background/formal-verification.tex
+++ b/src/content/background/formal-verification.tex
@@ -2,17 +2,17 @@
 \section{Formal Verification}\label{sec:formal_verification}
 %----------------------------------------------------------------------------
 
-In order to raise the reliability of system analysis, a system analysis technique is required that can have the precision of paper-and-pencil based mathematical proofs, and thus does not rely upon computer-arithmetic, and utilizes the computers for bookkeeping, to be able to handle complex systems without having to worry about human-errors. Formal verification methods, which are primarily based on theoretical computer science fundamentals like logic calculi, automata theory and strongly type systems, fulfil these requirements. The main principle behind formal analysis of a system is to construct a computer based mathematical model of the given system and formally verify, within a computer, that this model meets rigorous specifications of intended behaviour. Due to the mathematical nature of the analysis, 100\% accuracy can be guaranteed.\cite{https://doi:10.4018/978-1-4666-5888-2.ch705}
+In order to raise the reliability of system analysis, a system analysis technique is required that can have the precision of paper-and-pencil based mathematical proofs, and thus does not rely upon computer-arithmetic, and utilizes the computers for bookkeeping, to be able to handle complex systems without having to worry about human-errors. Formal verification methods, which are primarily based on theoretical computer science fundamentals like logic calculi, automata theory and strongly type systems, fulfil these requirements. The main principle behind formal analysis of a system is to construct a computer based mathematical model of the given system and formally verify, within a computer, that this model meets rigorous specifications of intended behaviour. Due to the mathematical nature of the analysis, 100\% accuracy can be guaranteed \cite{https://doi:10.4018/978-1-4666-5888-2.ch705}.
 
 \subsection{Model Checking}
 
-\emph{Model Checking} is a formal verification method to verify properties of finite systems, i.e., to decide whether a given formal model \(M\) satisfies a given requirement \(\gamma\) or not. The name comes from formal logic, where a logical formula may have zero or more models, which define the interpretation of the symbols used in the formula and the base set such that the formula is true. In this sense, the question is whether the formal model is indeed a model of the formal requirement: \(M \models \gamma\)?
+\emph{Model Checking} is a formal verification method to verify properties of finite systems, i.e., to decide whether a given formal model \(M\) satisfies a given requirement \(\gamma\) or not. The name comes from formal logic, where a logical formula may have zero or more models, which define the interpretation of the symbols used in the formula and the base set such that the formula is true. In this sense, the question is whether the formal model is indeed a model of the formal requirement: \(M \not\models \gamma\)?
 
-Model Checker algorithms (see \autoref{fig:model_checking}), such as UPPAAL\footnote{https://uppaal.org/}\cite{uppaal} or Theta\footnote{https://inf.mit.bme.hu/en/theta}\cite{theta} use SAT solvers to answer this question; and can even return a \emph{proof} (i.e., a part of the model) that \(M\) indeed does satisfy said requirement\footnote{These proofs usually come in the form of an execution trace}.
+Model Checker algorithms (see \autoref{fig:model_checking}), such as UPPAAL\footnote{https://uppaal.org/} \cite{uppaal} or Theta\footnote{https://inf.mit.bme.hu/en/theta} \cite{theta} can answer this question, and can even return a \emph{proof} (i.e., a part of the model) that \(M\) indeed does satisfy said requirement\footnote{These proofs usually come in the form of an execution trace}.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=67mm, keepaspectratio]{figures/model_checking.png}\hspace{1cm}
+	\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{model-checking}
 	\caption{An illustration of model checking.}
 	\label{fig:model_checking}
 \end{figure}
@@ -21,8 +21,8 @@ Model Checker algorithms (see \autoref{fig:model_checking}), such as UPPAAL\foot
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=67mm, keepaspectratio]{figures/petri_net.png}\hspace{1cm}
-	\caption{An example Petri net with 2 transitions and 4 places.}
+	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{petri-net}
+	\caption{An example Petri net modeling the process of \(H_2O\) molecule creation.}
 	\label{fig:petri_net}
 \end{figure}
 
@@ -46,11 +46,11 @@ In words: W describes the \emph{weight} of each flow from a transition to a plac
 
 \subsection{Activities as Petri Nets}\label{ssec:activities-as-petri-nets}
 
-Formal verification requires models to be specified using \emph{mathematical} precision. The paper called "Verifying SysML activity diagrams using formal transformation to Petri nets"\cite{https://doi.org/10.1002/sys.21524} by Edward Huang, Leon F. McGinnis and Steven W. Mitchell proposes a way to \emph{partially} map SysML activity diagrams to Petri nets. In the following, I will summarise their work.
+Formal verification requires models to be specified using \emph{mathematical} precision, however SysML does not have precise semantics \cite{pssm-testing, pssm, euml}. The paper called "Verifying SysML activity diagrams using formal transformation to Petri nets" \cite{https://doi.org/10.1002/sys.21524} by Edward Huang, Leon F. McGinnis and Steven W. Mitchell proposes a way to \emph{partially} map SysML activity diagrams to Petri nets. In the following, I will summarise their work.
 
 \subsubsection{Constrained Sub-set of SysML}\label{ssec:sysml_assumptions}
 
-Since SysML Activity Diagrams do not have exact execution semantics\cite{euml}, the PN mapping can only be done for a limited subset of the modeling elements: \emph{actions}, \emph{initial nodes}, \emph{final nodes}, \emph{join nodes}, \emph{fork nodes}, \emph{merge nodes}, \emph{decision nodes}, \emph{pins} and \emph{object/control flows}, which have precise execution semantics as defined in the Foundational Subset for Executable UML Models.\cite{fuml}
+Since SysML Activity Diagrams do not have exact execution semantics, the PN mapping can only be done for a limited subset of the modeling elements: \emph{actions}, \emph{initial nodes}, \emph{final nodes}, \emph{join nodes}, \emph{fork nodes}, \emph{merge nodes}, \emph{decision nodes}, \emph{pins} and \emph{object/control flows}, which have precise execution semantics as defined in the Foundational Subset for Executable UML Models \cite{fuml}.
 
 The paper also assumes the following constrains:
 
@@ -60,7 +60,7 @@ The paper also assumes the following constrains:
 	\item Optional object/control flows are not considered, ie, multiplicity lower bounds are strictly positive.
 \end{enumerate}
 
-These constraints allow the mapping between activities and Petri nets, however, the constructed PN will not be semantically equivalent - data cannot flow between nodes. This fact will be addressed in \autoref{ch:activiy_verification}.
+These constraints allow the mapping between activities and Petri nets, however, the constructed PN will not be semantically equivalent - data cannot flow between nodes. This fact is the motivation behind formalising a more-complete mapping (see \autoref{ch:gamma-activity-language}).
 
 \subsubsection{Mapping Rules}
 
@@ -72,10 +72,17 @@ In contrast, as soon as an IR node receives a token from any input, it immediate
 
 Given the set of assumptions in \autoref{ssec:sysml_assumptions}, control flows and object flows in an activity diagram can be mapped to arcs in a Petri net.
 
-Thus, we have defined how to map the constrained set of Activity Diagram elements to Petri net elements.
+Finally, after mapping the elements, the resulting Petri net may contain transition-transition and place-place arcs, which are not valid; as final step, these arcs have to be split in two by inserting a transition or a place in the middle, making the model conform to the formalism.
 
 \subsubsection{Example Mapping}
 
-Figure ... shows an example mapping from a SysML activity diagram to a Petri net
+\begin{figure}[!ht]
+	\centering
+	\includesvg[inkscapelatex=false, width=130mm, keepaspectratio]{activity-pn-mapping}
+	\caption{Example mapping from activity diagram to Petri net.}
+	\label{fig:activity-pn-mapping}
+\end{figure}
+
+\autoref{fig:activity-pn-mapping} shows an example mapping from the activity \autoref{fig:activity-running-example}. The resulting elements are annotated with the names of their counter parts in the activity diagram.
 
 For more information, please refer to the Paper!
