--- a/src/content/background/xsts.tex
+++ b/src/content/background/xsts.tex
@@ -2,7 +2,7 @@
 \section{Extended Symbolic Transition System}\label{sec:xsts}
 %----------------------------------------------------------------------------
 
-The high-level nature of engineering models means they are easy-to-use for engineers, but leads to difficulties during the formal verification process. SysML state machines and acitivty diagrams for example contain high-level  constructs that make the modeling workflow more intuitive and enable the modeling of significantly more complex systems, however they are difficult to process using formal methods that are defined on low-level mathematical formalism and verified using SMT solvers. In this section, I introduce the XSTS\cite{xsts} language, which is a low-level modeling formalism designed to bridge the aforementioned gap between engineering models and formal methods.
+The high-level nature of engineering models means they are easy-to-use for engineers, but leads to difficulties during the formal verification process. SysML state machines and acitivty diagrams for example contain high-level  constructs that make the modeling workflow more intuitive and enable the modeling of significantly more complex systems, however they are difficult to process using formal methods that are defined on low-level mathematical formalism and verified using SMT solvers. In this section, I introduce the XSTS \cite{xsts} language, which is a low-level modeling formalism designed to bridge the aforementioned gap between engineering models and formal methods.
 
 \subsection{Formal definition}
 
@@ -11,27 +11,27 @@ The high-level nature of engineering models means they are easy-to-use for engin
 	An \emph{Extended symbolic transition system} is a tuple \( XSTS = (D, V, V_C, IV, Tr, In, En) \), where:
 	
 	\begin{itemize}
-		\item \(D = \{ D_{v1}, D_{v2}, \dots, D_{vn} \} \) is a set of value domains;
-		\item \(V = \{ v_1, v_2, \dots, v_n \} \) is a set of variables with domains \(D_{v1}, D_{v2}, \dots, D_{vn}\);
+		\item \(D = \{ D_{v_1}, D_{v_2}, \dots, D_{v_n} \} \) is a set of value domains;
+		\item \(V = \{ v_1, v_2, \dots, v_n \} \) is a set of variables with domains \(D_{v_1}, D_{v_2}, \dots, D_{v_n}\);
 		\item \(V_C \subseteq V\) is a set of variables marked as \emph{control variables};
-		\item \(IV \in D_{v1} \times D_{v2} \times \dots \times D_{vn}\) is the \emph{initial value function} used to describe the initial state. The initial value function \(IV\) assigns an initial value \(IV(v) \in D_v\) to variables \(v \in V\) of their domain \(D_v\);
+		\item \(IV \in D_{v_1} \times D_{v_2} \times \dots \times D_{v_n}\) is the \emph{initial value function} used to describe the initial state. The initial value function \(IV\) assigns an initial value \(IV(v) \in D_v\) to variables \(v \in V\) of their domain \(D_v\);
 		\item \(Tr \subseteq Ops\) is a set of operations, representing the \emph{internal transition relation}; it describes the internal behaviour of the system;
 		\item \(In \subseteq Ops\) is a set of operations, representing the \emph{initialisation transition relation}; it is used to describe more complex initialisation, and is executed once and only once, at the very beginning;
 		\item \(En \subseteq Ops\) is a set of operations, representing the \emph{environmental transition relation}; it is used to model the system's interactions with its environment.
 	\end{itemize}
 \end{definition}\label{def:xsts}
 
-In any state of the system a single operation is selected from the sets introduced above (\(Tr\), \(In\) and \(En\)). The set from where the operation can be selected depends on the current state: In the initial state - (which is described by the initialization vector \(IV\)) - only operations from the \(In\) set can be executed. Operations from the \(In\) set can only fire in the initial state and nowhere else. After that, \(En\) and \(Tr\) are selected in an alternating manner.
+In any state of the system a single operation is selected from the sets introduced above (\(Tr\), \(In\) and \(En\)). The set from where the operation can be selected depends on the current state: In the initial state - which is described by the initialization vector \(IV\) - only operations from the \(In\) set can be executed. Operations from the \(In\) set can only fire in the initial state and nowhere else. After that, \(En\) and \(Tr\) are selected in an alternating manner.
 
 Operations \(op \in Ops\) describe the transitions between states of the system, where \(Ops\) is the set of all possible transitions. All operations are atomic in the sense that they are either executed in their entirety or none at all. XSTS defines the following operations:
 
 \paragraph{Basic operations}
 
-Basic operations contain no inner (nested) operations. \textbf{Assignments} assign a given value \(v\) from domain \(D_n\) to variable \(V_n\). \textbf{Havocs} behave likewise, except the value is not predetermined; giving a way to assign random value to a variable. Lastly, \textbf{assumptions} check a condition, and can only be executed if their condition evaluates to \emph{true}.
+Basic operations contain no inner (nested) operations. \emph{Assignments} assign a given value \(v\) from domain \(D_n\) to variable \(V_n\). \emph{Havocs} behave likewise, except the value is not predetermined; giving a way to assign random value to a variable. Lastly, \emph{assumptions} check a condition, and can only be executed if their condition evaluates to \emph{true}.
 
 \paragraph{Composite operations}
 
-Composite operations contain other operations, and can be used to describe complex control stuctures. Note that while these are composite operations, their execution is still atomic; meaning that an \emph{assume} operation prevents its containing operations from firing. \textbf{Sequences} are essentially multiple operations executed after each other, while \textbf{parallels} execute all operations at the same time. And lastly, \textbf{choices} model non-deterministic choices between multiple operations; one and only one branch of the choice operation is selected for execution, but that selected operation can still only be executed atomically - e.g., a single failing assume operation can prevent execution.
+Composite operations contain other operations, and can be used to describe complex control stuctures. Note that while these are composite operations, their execution is still atomic; meaning that an \emph{assume} operation prevents its containing operations from firing. \emph{Sequences} are essentially multiple operations executed after each other, while \emph{parallels} execute all operations at the same time. And lastly, \emph{choices} model non-deterministic choices between multiple operations; one and only one branch of the choice operation is selected for execution, but that selected operation can still only be executed atomically - e.g., a single failing assume operation can prevent execution.
 
 \subsection{Simple example}
 
@@ -42,3 +42,4 @@ Below is an example XSTS model defined in the language. For a more exact present
 	Akár lehetne egy Gamma által generált statechart is.
 \end{Verbatim}
 
+\todo{Statechart model xsts változata legyen}
