--- a/src/content/evaluation.tex
+++ b/src/content/evaluation.tex
@@ -1,3 +1,7 @@
 %----------------------------------------------------------------------------
 \chapter{Evaluation}\label{ch:evaluation}
 %----------------------------------------------------------------------------
+
+spacecraft model bevezetése, leírása
+statechart elemek referálása, activity-k megírása kézzel (modell mehet apendix-be)
+mérések végzése és leírása
